CREATE TABLE City (
    C_ID INT PRIMARY KEY
);

CREATE TABLE Province (
    P_ID INT PRIMARY KEY
);

CREATE TABLE Locations (
    LOC_CITY INT,
    LOC_PROVINCE INT,
    PRIMARY KEY (LOC_CITY, LOC_PROVINCE),
    FOREIGN KEY (LOC_CITY) REFERENCES City(C_ID),
    FOREIGN KEY (LOC_PROVINCE) REFERENCES Province(P_ID)
);

CREATE TABLE Lesson (
    LS_ID INT PRIMARY KEY,
    LOC_ID INT,
    LSCH_ID INT,
    FOREIGN KEY (LOC_ID) REFERENCES Locations(LOC_CITY),
    FOREIGN KEY (LSCH_ID) REFERENCES LessonSchedule(LSCH_ID)
);

CREATE TABLE Private (
    LS_ID INT PRIMARY KEY,
    FOREIGN KEY (LS_ID) REFERENCES Lesson(LS_ID)
);

CREATE TABLE Group (
    LS_ID INT PRIMARY KEY,
    FOREIGN KEY (LS_ID) REFERENCES Lesson(LS_ID)
);

CREATE TABLE LessonSpace (
    LS_ID INT,
    LOC_ID INT,
    LS_OWNED BOOLEAN,
    PRIMARY KEY (LS_ID),
    FOREIGN KEY (LS_ID) REFERENCES Lesson(LS_ID),
    FOREIGN KEY (LOC_ID) REFERENCES Locations(LOC_CITY)
);

CREATE TABLE LessonSchedule (
    LSCH_ID INT PRIMARY KEY,
    DTS_ID INT,
    FOREIGN KEY (DTS_ID) REFERENCES DayTimeSlots(DTS_ID)
);

CREATE TABLE DayTimeSlots (
    DTS_ID INT PRIMARY KEY,
    LSCH_ID INT,
    DTS_START_DATE DATE,
    DTS_END_DATE DATE,
    FOREIGN KEY (LSCH_ID) REFERENCES LessonSchedule(LSCH_ID)
);

CREATE TABLE Instructor (
    I_ID INT PRIMARY KEY,
    I_NAME VARCHAR(255),
    I_PHONE VARCHAR(255)
);

CREATE TABLE Specialization (
    S_ID INT PRIMARY KEY,
    S_NAME VARCHAR(255)
);

CREATE TABLE Offering (
    O_ID INT,
    I_ID INT,
    LS_ID INT,
    PRIMARY KEY (O_ID, I_ID, LS_ID),
    FOREIGN KEY (I_ID) REFERENCES Instructor(I_ID),
    FOREIGN KEY (LS_ID) REFERENCES Lesson(LS_ID)
);

CREATE TABLE Availability (
    I_ID INT,
    C_ID INT,
    PRIMARY KEY (I_ID, C_ID),
    FOREIGN KEY (I_ID) REFERENCES Instructor(I_ID),
    FOREIGN KEY (C_ID) REFERENCES City(C_ID)
);

CREATE TABLE Client (
    C_ID INT PRIMARY KEY,
    C_NAME VARCHAR(255),
    C_PHONE VARCHAR(255)
);

CREATE TABLE Registered (
    C_ID INT,
    O_ID INT,
    PRIMARY KEY (C_ID, O_ID),
    FOREIGN KEY (C_ID) REFERENCES Client(C_ID),
    FOREIGN KEY (O_ID) REFERENCES Offering(O_ID)
);