@startuml q2(crow)

skinparam linetype ortho

!define PK <&key>
!define FK <&link-intact>

entity Lesson {
    PK LS_ID: int
    --
    FK LOC_ID: int
    FK LSCH_ID: int
}

entity Private {}

entity Group {}

entity Locations {
    PK FK LOC_CITY: int
    PK FK LOC_PROVINCE: int
}

entity City {
    PK C_ID: int
}

entity Province {
    PK P_ID: int
}

entity LessonSpace {
    PK FK LS_ID: int
    --
    FK LOC_ID: int
    LS_OWNED: boolean
}

entity LessonSchedule {
    PK LSCH_ID: int
    --
    FK DTS_ID: int
}

entity Instructor {
    PK I_ID: int
    --
    I_NAME: string
    I_PHONE: string
}

entity Specialization {
    PK S_ID: int
    --
    S_NAME: string
}

entity Offering {
    PK O_ID: int
    PK FK I_ID: int
    PK FK LS_ID: int
}

entity Availability {
    PK FK I_ID: int
    PK FK C_ID: int
} 

entity Client {
    PK C_ID: int
    --
    C_NAME: string
    C_PHONE: string
}

entity Registered {
    PK FK C_ID: int
    PK FK O_ID: int
}

entity DayTimeSlots {
    PK DTS_ID: int
    PK FK LSCH_ID: int
    --
    DTS_START_DATE: DATE
    DTS_END_DATE: DATE
}

Lesson <|- Private
Lesson <|- Group

Lesson }|..|| LessonSpace
Lesson ||..|| LessonSchedule

LessonSchedule ||--o{ DayTimeSlots

LessonSpace }|..|| Locations

Locations ||..|| City
Locations ||..|| Province

Instructor ||..|| Specialization
Instructor ||..o{ Availability
Instructor }|..o| Offering

Availability ||..|| City

Offering }o..|| Lesson

Registered ||..|{ Offering
Registered ||..o{ Client

@enduml
